css/style.css
@font-face {
    font-family: myOutfit;
    src: url(../assets/fonts/outfit/Outfit-VariableFont_wght.ttf)
}

@font-face {
    font-family: myYSerif;
    src: url(../assets/fonts/young-serif/YoungSerif-Regular.ttf);
}

body {
    background: hsl(30, 54%, 90%);
    text: hsl(0, 0%, 100%);
    text: hsl(330, 100%, 98%);
    text: hsl(30, 54%, 90%);
    text: hsl(30, 18%, 87%);
    text: hsl(30, 10%, 34%);
    text: hsl(24, 5%, 18%);
    text: hsl(14, 45%, 36%);
    text: hsl(332, 51%, 32%);

}

main {
    background: hsl(0, 0%, 100%);
    padding: 30px;
    width: 650px;
    margin: 0 auto;
    border-radius: 10px;
    font-family: myOutfit;
    font-size: 16px;
}

img {
    width: 100%;
    border-radius: 10px;
}

h1 {
    font-family: myYSerif;
    font-size: 32px;
    letter-spacing: 1px;
}

h2 {
    font-family: myYSerif;
    font-size: 22px;
    color: hsl(14, 45%, 36%);
    letter-spacing: 1.2px;
}

p, ul, ol {
    font-family: myOutfit;
    font-size: 16px;
    color: hsl(30, 10%, 34%);
}

.prep {
    background: hsl(330, 100%, 98%);
    padding: 20px;
    border-radius: 10px;
    margin: 30px 0px;
}

.prep ul li::marker {
    color: hsl(332, 51%, 32%);
}

h3 {
    color: hsl(332, 51%, 32%);
}

li {
    padding: 10px 0px;
}

.ingredients ul li::marker {
    color: hsl(14, 45%, 36%);
}

ol li::marker {
    color: hsl(14, 45%, 36%);
    font-weight: bold;
}

ul li {
    padding-left: 10px;
}


ol li {
    padding-left: 15px;
    line-height: 25px;
}

hr {
    border: .5px hsl(30, 18%, 87%) solid;
    width: 96%;
}

footer {
    margin: 40px 0px;
    text-align: center;
    font-family: myOutfit;
    color:hsl(332, 51%, 32%);
}

footer a {
    color: hsl(24, 5%, 18%);
}

